hphp/hack/test/typecheck/instanceof_nullable.php.exp
object
File "instanceof_nullable.php", line 6, characters 21-22:
Don't use dynamic classes (Typing[4125])
